--- a/Source/SizeOnDisk/Legend.xaml
+++ b/Source/SizeOnDisk/Legend.xaml
@@ -2,10 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:conv="clr-namespace:SizeOnDisk.Converters"
-        xmlns:lex="http://schemas.root-project.org/xaml/presentation"
+        xmlns:lex="http://wpflocalizeextension.codeplex.com"
         xmlns:this="clr-namespace:SizeOnDisk"
         xmlns:ui="clr-namespace:SizeOnDisk.UI"
-        Title="{lex:LocText SizeOnDisk:Localization:Legend}"
+        Title="{lex:Loc Legend}"
         ResizeMode="NoResize"
         SizeToContent="Height"
         WindowStartupLocation="CenterOwner"
