--- a/Source/SizeOnDisk/MainWindow.xaml
+++ b/Source/SizeOnDisk/MainWindow.xaml
@@ -3,16 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:conv="clr-namespace:SizeOnDisk.Converters"
         xmlns:vm="clr-namespace:SizeOnDisk.ViewModel"
-        xmlns:ui="clr-namespace:SizeOnDisk.UI"
+        xmlns:cmd="http://wpfbyyourcommand.codeplex.com"
         xmlns:lex="http://wpflocalizeextension.codeplex.com"
-        xmlns:engine="http://wpflocalizeextension.codeplex.com"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         mc:Ignorable="d" 
-        engine:ResxLocalizationProvider.DefaultAssembly="SizeOnDisk"
-        engine:ResxLocalizationProvider.DefaultDictionary="Localization"
-        engine:LocalizeDictionary.DesignCulture="fr"
-        ui:CreateCommandContext.Context="{Binding}"
+        lex:ResxLocalizationProvider.DefaultAssembly="SizeOnDisk"
+        lex:ResxLocalizationProvider.DefaultDictionary="Localization"
+        lex:LocalizeDictionary.DesignCulture="fr"
+        cmd:CommandEx.Context="{Binding}"
         Title="{Binding Path=SelectedValue, StringFormat=SizeOnDisk - \{0\}, ElementName=treeView}"
         Height="500"
         Width="850"
@@ -38,12 +37,13 @@
                     Value="2,0" />
         </Style>
         <ContextMenu x:Key="VMContextMenu">
-            <MenuItem Command="vm:VMFile.OpenCommand" Header="{lex:Loc Key=PresentationCore:ExceptionStringTable:OpenText}" InputGestureText="{lex:Loc Key=PresentationCore:ExceptionStringTable:OpenKey}" />
+            <!--MenuItem Command="vm:VMFile.OpenCommand" Header="{lex:Loc Key=PresentationCore:ExceptionStringTable:OpenText}" InputGestureText="{lex:Loc Key=PresentationCore:ExceptionStringTable:OpenKey}" /-->
+            <MenuItem cmd:CommandExLoc.Command="vm:VMFile.OpenCommand" />
             <MenuItem Command="vm:VMFile.EditCommand" Header="{lex:Loc EditText}" InputGestureText="{lex:Loc EditKey}" />
             <MenuItem Command="vm:VMFile.OpenAsCommand" />
             <MenuItem Command="Print">
                 <MenuItem.Icon>
-                    <ui:AutoDisablingImage Width="16"
+                    <cmd:AutoDisablingImage Width="16"
                                            Height="16"
                                            Source="/SizeOnDisk;component/Icons/PrintHS.png" />
                 </MenuItem.Icon>
@@ -52,7 +52,7 @@
             <MenuItem Command="vm:VMFile.ExploreCommand" />
             <MenuItem Command="Find">
                 <MenuItem.Icon>
-                    <ui:AutoDisablingImage Width="16"
+                    <cmd:AutoDisablingImage Width="16"
                                            Height="16"
                                            Source="/SizeOnDisk;component/Icons/SearchFolderHS.png" />
                 </MenuItem.Icon>
@@ -61,14 +61,14 @@
             <!--MenuItem Command="vm:VMFile.RenameCommand" /-->
             <MenuItem Command="Delete" Header="{lex:Loc Key=PresentationCore:ExceptionStringTable:DeleteText}" InputGestureText="{lex:Loc Key=PresentationCore:ExceptionStringTable:DeleteKey}">
                 <MenuItem.Icon>
-                    <ui:AutoDisablingImage Width="16"
+                    <cmd:AutoDisablingImage Width="16"
                                            Height="16"
                                            Source="/SizeOnDisk;component/Icons/DeleteHS.png" />
                 </MenuItem.Icon>
             </MenuItem>
             <MenuItem Command="vm:VMFile.PermanentDeleteCommand" Header="{lex:Loc PermanentDelete}" InputGestureText="Shift DEL">
                 <MenuItem.Icon>
-                    <ui:AutoDisablingImage Width="16"
+                    <cmd:AutoDisablingImage Width="16"
                                            Height="16"
                                            Source="/SizeOnDisk;component/Icons/DeleteHS.png" />
                 </MenuItem.Icon>
@@ -85,20 +85,12 @@
         </Grid.RowDefinitions>
         <ToolBar Grid.Row="0"
                  Height="Auto">
-            <Button ToolTip="{lex:Loc ChooseFolder}"
-                    Command="Open"
-                    Margin="2">
-                <Button.Content>
-                    <Image Width="16"
-                           Height="16"
-                           Source="/SizeOnDisk;component/Icons/openfolderHS.png" />
-                </Button.Content>
-            </Button>
+            <Button cmd:CommandExLoc.Command="vm:VMRootHierarchy.OpenFolderCommand" Margin="2" />
             <Button ToolTip="{lex:Loc Recalculate}"
                     Command="NavigationCommands.Refresh"
                     Margin="2">
                 <Button.Content>
-                    <ui:AutoDisablingImage Width="16"
+                    <cmd:AutoDisablingImage Width="16"
                                            Height="16"
                                            Source="/SizeOnDisk;component/Icons/Refresh.png" />
                 </Button.Content>
@@ -107,7 +99,7 @@
                     Command="Stop"
                     Margin="2">
                 <Button.Content>
-                    <ui:AutoDisablingImage Width="16"
+                    <cmd:AutoDisablingImage Width="16"
                                            Height="16"
                                            Source="/SizeOnDisk;component/Icons/StopHS.png" />
                 </Button.Content>
@@ -116,7 +108,7 @@
                     Command="Close"
                     Margin="2">
                 <Button.Content>
-                    <ui:AutoDisablingImage Width="16"
+                    <cmd:AutoDisablingImage Width="16"
                                            Height="16"
                                            Source="/SizeOnDisk;component/Icons/DeleteHS.png" />
                 </Button.Content>
@@ -137,7 +129,7 @@
                     ToolTip="{lex:Loc RunAsAdministrator}"
                     Margin="2">
                 <Button.Content>
-                    <ui:AutoDisablingImage Width="16"
+                    <cmd:AutoDisablingImage Width="16"
                                            Height="16"
                                            Source="/SizeOnDisk;component/Icons/Shield.png" />
                 </Button.Content>
@@ -170,7 +162,8 @@
                       ContextMenu="{StaticResource VMContextMenu}"
                       BorderBrush="{Binding ElementName=Listing, Path=BorderBrush}"
                       DisplayMemberPath="Name"
-                      SelectedValuePath="Path" PreviewMouseRightButtonDown="TreeView_PreviewMouseRightButtonDown">
+                      SelectedValuePath="Path"
+                      cmd:ItemsControlExtender.FocusPreviewMouseRightButtonDown="True">
                 <TreeView.ItemContainerStyle>
                     <Style TargetType="{x:Type TreeViewItem}">
                         <Setter Property="Padding"
