Bif refactoring. Working but cleanup to do.

--- a/Source/SizeOnDisk/App.xaml
+++ b/Source/SizeOnDisk/App.xaml
@@ -8,9 +8,16 @@
                 <!--ResourceDictionary Source="/PresentationFramework.Royale, Version=4.0.0.0,
                        Culture=neutral, PublicKeyToken=31bf3856ad364e35,
                        ProcessorArchitecture=MSIL;component/themes/Royale.normalcolor.xaml" /-->
-                <ResourceDictionary Source="/PresentationFramework.Aero2, Version=4.0.0.0,
+                <!--ResourceDictionary Source="/PresentationFramework.Aero2, Version=4.0.0.0,
                        Culture=neutral, PublicKeyToken=31bf3856ad364e35,
-                       ProcessorArchitecture=MSIL;component/themes/Aero2.normalcolor.xaml" />
+                       ProcessorArchitecture=MSIL;component/themes/Aero2.normalcolor.xaml" /-->
+                <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
+                <!--Accent and AppTheme setting -->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
                 <ResourceDictionary Source="Themes/Default.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
