--- a/Source/SizeOnDisk/Themes/default.xaml
+++ b/Source/SizeOnDisk/Themes/default.xaml
@@ -1,5 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:lexeng="clr-namespace:WPFLocalizeExtension.Engine;assembly=WPFLocalizeExtension"
+                    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                     xmlns:base="clr-namespace:System.Windows;assembly=WindowsBase">
-
+    <Style TargetType="TextBlock">
+        <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
+    </Style>
+    <Style TargetType="{x:Type lexeng:EnumComboBox}" BasedOn="{StaticResource MetroComboBox}" />
 </ResourceDictionary>
